--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,22 @@
-version: "3.9"
-
 services:
-  postgres:
-    image: postgres:latest
-    container_name: postgres_db
-    restart: always
+  redis:
+    image: redis:alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+
+  db:
+    image: postgres:13
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: property_db
+      POSTGRES_DB: travel_db
+      POSTGRES_USER: travel_user
+      POSTGRES_PASSWORD: travel_pass
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
-  redis:
-    image: redis:latest
-    container_name: redis_cache
-    restart: always
-    ports:
-      - "6379:6379"
-
 volumes:
+  redis_data:
   postgres_data:
