--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,18 @@
-services:
-  redis:
-    image: redis:alpine
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
+version: '3.9'
 
-  db:
-    image: postgres:13
+services:
+  postgres:
+    image: postgres:latest
+    container_name: postgres
     environment:
-      POSTGRES_DB: travel_db
-      POSTGRES_USER: travel_user
-      POSTGRES_PASSWORD: travel_pass
+      POSTGRES_USER: your_user
+      POSTGRES_PASSWORD: your_password
+      POSTGRES_DB: your_db
     ports:
       - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
 
-volumes:
-  redis_data:
-  postgres_data:
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - "6379:6379"
