--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,17 @@ services:
       POSTGRES_DB: your_db
     ports:
       - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 
   redis:
     image: redis:latest
     container_name: redis
     ports:
       - "6379:6379"
+    volumes:
+      - redis_data:/data
+
+volumes:
+  postgres_data:
+  redis_data:
